# CppTest

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  issue-auto-branch.yml  issue-ready-for-merge-pr.yml  issue-ready-for-test.yml
pull/: 4
src/: main.cpp  operations.cpp  operations.h
tests/: test_operations.cpp
